# crawl-first

./: .gitignore  .mcp.json  LICENSE  Makefile  QUICKSTART.md  README.md  SETUP.md  log.txt  nmdc_biosample_enrichment_enriched_plan_v_2.md  philosophy.md  process_random_ids.sh  pyproject.toml  results-ls.txt  validation_agent_improvements.md
.github/workflows/: publish.yml  test.yml
data/inputs/: biosample-ids.txt  test-single-biosample.txt
data/outputs/claude/: landuse-mcp-test.txt  mcp-servers-test.txt  weather-mcp-test.txt  weather-test.txt
data/outputs/crawl-first/test-pdf/: nmdc_bsm-11-dd8yd668.yaml
data/outputs/crawl-first/test-pdf-fresh/: nmdc_bsm-11-dd8yd668.yaml
data/outputs/crawl-first/test-results/: nmdc_bsm-11-01f6m423.yaml  nmdc_bsm-11-0vqkxy43.yaml  nmdc_bsm-11-1b246v67.yaml  nmdc_bsm-11-2m6ma821.yaml  nmdc_bsm-11-2qaqh504.yaml  nmdc_bsm-11-301ntr20.yaml  nmdc_bsm-11-3hm8jt19.yaml  nmdc_bsm-11-44r35671.yaml  nmdc_bsm-11-4ra1ye56.yaml  (+33 more)
data/outputs/tests/: random-ids-test.txt
data/outputs/validation-streaming-custom/: validation_nmdc_bsm-11-05yzsw39.json  validation_nmdc_bsm-11-0g28x785.json  validation_nmdc_bsm-11-10cg0s25.json  validation_nmdc_bsm-11-1pbfcc79.json  validation_nmdc_bsm-11-21j98y09.json  validation_nmdc_bsm-11-22ykdz88.json  validation_nmdc_bsm-11-27vcsj51.json  validation_nmdc_bsm-11-2b3nvt16.json  validation_nmdc_bsm-11-2fbx5b73.json  validation_nmdc_bsm-11-2ggfq219.json  validation_nmdc_bsm-11-2v8trb06.json  validation_nmdc_bsm-11-385ax494.json  validation_nmdc_bsm-11-39fd9704.json  validation_nmdc_bsm-11-39k6sh79.json  validation_nmdc_bsm-11-3qhtv606.json  validation_nmdc_bsm-11-4bvmzq44.json  validation_nmdc_bsm-11-4f99v168.json  validation_nmdc_bsm-11-4jp9g708.json  validation_nmdc_bsm-11-4y0frx96.json  validation_nmdc_bsm-11-4ycxmk54.json  validation_nmdc_bsm-11-54bw8002.json  validation_nmdc_bsm-11-7cqns990.json  validation_nmdc_bsm-11-7mnq9s32.json  validation_nmdc_bsm-11-7px1xy20.json  validation_nmdc_bsm-11-7q0tq290.json  validation_nmdc_bsm-11-8ah8pz02.json  validation_nmdc_bsm-11-8db1c356.json  validation_nmdc_bsm-11-8nreet90.json  validation_nmdc_bsm-11-8xbvzk86.json  validation_nmdc_bsm-11-9cj63327.json  validation_nmdc_bsm-11-9d78ha54.json  validation_nmdc_bsm-11-9fx2jm15.json  validation_nmdc_bsm-11-9gmcv191.json  validation_nmdc_bsm-11-advztx82.json  validation_nmdc_bsm-11-af88zh71.json  validation_nmdc_bsm-11-ag9hbz42.json  validation_nmdc_bsm-11-ahntv778.json  validation_nmdc_bsm-11-anzgdj82.json  validation_nmdc_bsm-11-as1kg095.json  validation_nmdc_bsm-11-b9kfx955.json  (+60 more)
data/samples/: biosample-ids-10.txt
src/crawl_first/: __init__.py  analysis.py  biosample.py  cache.py  cli.py  direct_retrieval.py  geospatial.py  logging_utils.py  osm.py  validation_agent.py  yaml_utils.py
tests/: test_cli.py
(+1 files in other folders)
